inou/prp/tests/errors/overflow_reassign_recovered.prp
/*
:name: overflow_reassign_recovered
:type: error
:error: does not fit
*/

// Every typed write must fit the declared envelope, even if a later write
// brings the final value back in range.

mut acc:u4 = 0
acc = acc + 20
acc = 0
